--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.03.2022 08:35:33</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.03.2022 09:13:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 25. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s párkem</strong>
+<strong>Tomatová s cizrnou a pestem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hrachová kaše s uzenou krkovičkou, okurkou a cibulkou</strong>
+<strong>Vepřový perkelt s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Smažený provensálský řízek s vařeným bramborem a okurkou</strong>
+<strong>Hrušková žemlovka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							115,-
 						</span>
 </p>
 <p>
@@ -52,6 +52,16 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 25.3.2022</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Citronový cheesecake</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Zeleninový krém, krutony, pažitka - ve menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">35 Kč</div>
@@ -111,7 +121,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho candata s citronem a petrzelkovym pestem, stouchane brambory s creme fraiche, salatek 175</li><li>Palive a vonave goanske vindalu s hovezim masem, bramborami a garam masala, jasminova ryze, salatek 139</li><li>Pecena divoka kachna s nadivkou s kachnimi jatry a susenymi rajcaty,  merunkove catny, gratinovane brambory, salatek z cervene repy 175</li><li>Smazeny kvetak, stouchane brambory s creme fraiche, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a krenovou jogurtovou omackou, smazena zeleninova ryze, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s citronem a krenovou jogurtovou omackou, smazena zeleninova ryze, salatek 175</li><li>Nam sod – thajsky teply salat s veprovym masem, ryzovymi nudlemi thajskou bazalkou, klicky, sladkokyselou zalivkou a zeleninou 139</li><li>Spagety s nudlickami irskeho hoveziho krku, pecenou dyni, petrzelkovym pestem a hoblinami tvrdeho syra {L} 169 </li><li>Pecene lilky v rajcatove omacce s maslovymi fazolemi, bylinkami a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
