--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.03.2022 14:53:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.03.2022 07:11:05</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 27. 03. 2022</h5>
+<h5>Pondělí, 28. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová s cizrnou a pestem</strong>
@@ -50,9 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 27.3.2022</div>
+<div class="nadpis">Pondělí 28.3.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -63,16 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Fazolová s klobásou a bramborem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Hovězí nudličky na červeném víně s kukuřicí a grilovanou karotkou, dušená jasmínová rýže</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, brusinky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Konfitovaná vepřová plec s rozmarýnem a česnekem, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené šunkofleky s vejci a smetanou, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, vídeňská cibule, kyselá okurka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Filírovaná kuřecí prsa na smetanové kari omáčce, vaječná roláda se sýrem, rukola</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné houbové omáčce, restované špecle</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecím masem v gyros koření, trhaný listy salátu, zeleniny a česnekovým dresinkem, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný olivovým olejem, řezy z vepřové panenky, vařené vejce, parmazán</td><td class="menuPrice">141,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">170g Steak z vepřové pečeně se šunkou gratinovaný sýrem, smažené hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Minutkové srbské kuřecí rizoto se zeleninou a houbami, strouhaný sýr</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s česnekem, smažené bramborové plátky, mexický dip</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, vídeňská cibule, kyselá okurka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Roláda z vepřové pečeně plněná slaninou. žampiony a vařeným vejcem, grilovaná karotka, květákové pyré, parmazán, rukola</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se sušenými rajčaty, šunkou a pórkem zjemněné smetanou, medailonky z  vepřové panenky, parmazán</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněné vepřovou panenkou, zeleninou, ledovým salátem a majonézovým dresinkem, smažené hranolky, tatarka</td><td class="menuPrice">159,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vyšlehaný vanilkový krém s griliašem a mandlemi, smažené slzy v cukru zakápnuté olivovým olejem </td><td class="menuPrice">55,-</td></tr></tbody>
@@ -86,40 +83,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount"></td>
-<td class="title">Grilované papriky v česnekovém olivovém oleji s ricottou
-a bazalkou, rozpečená bylinková bageta 1a,3,7</td>
-<td class="pricem">145 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Polévka Tom Yum Goong s krevetami
-(rajčata, hlíva ústřičná, koriandr, kokosové mléko) 4,5,6,9</td>
-<td class="pricem">99 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Presovaný vepřový bůček v teriyaki omáčce s grilovaným salátem
-Pak choi a jasmínovou rýží 6,12</td>
-<td class="pricem">205 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Jehněčí burger se sýrem Cheddar, vídeňskou cibulkou,
-smaženými bramborovými lupínky a chipotle majonézou
-1a,3,7,10,11</td>
-<td class="pricem">235 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Italské tiramisu 1a,3,7,8a</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Kulajda s houbami a vařenými vejci 1a,3,7</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Moravský vrabec s bílým zelím a našimi bramborovými knedlíky 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Čevabčiči s pažitkovými brambory, hořčicí a cibulkou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety puttanesca s rukolou a sýrem Forte Classico 1a,3,4,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
