--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.03.2022 08:15:07</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.03.2022 08:44:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -67,6 +67,11 @@
 <div class="cena">55 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Bábovka</div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Krém z celeru a pečených jablek, krutony, pažitka- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">45 Kč</div>
@@ -131,7 +136,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a krenovou jogurtovou omackou, smazena zeleninova ryze, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s citronem a krenovou jogurtovou omackou, smazena zeleninova ryze, salatek 175</li><li>Nam sod – thajsky teply salat s veprovym masem, ryzovymi nudlemi thajskou bazalkou, klicky, sladkokyselou zalivkou a zeleninou 139</li><li>Spagety s nudlickami irskeho hoveziho krku, pecenou dyni, petrzelkovym pestem a hoblinami tvrdeho syra {L} 169 </li><li>Pecene lilky v rajcatove omacce s maslovymi fazolemi, bylinkami a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se syrskymi bio olivami a petrzelkovym pestem, etiopsky jahlovy salat s petrzelkou, citrony a zeleninou 139</li><li>Peceny filet z cerstveho mecouna se syrskymi bio olivami a petrzelkovym pestem, etiopsky jahlovy salat s petrzelkou, citrony a zeleninou, 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade, jasminova ryze, salatek 139</li><li>Italske houbove rizoto s parmezanem a pecenou nutrii na cesneku a bilem vine, salatek 169</li><li>Smazena pakora {cizrnove smazenky} s pecenou dyni, kvetakem, cibukou a lilky, smazena zeleninova ryze, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
