Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.03.2022 08:44:32</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.03.2022 09:11:26</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Úterý, 29. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kari s baby karotkou</strong>
+<strong>Hrachová s uzeným</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Znojemská hovězí pečeně s rýží</strong>
+<strong>Vepřová plec s cibulovou omáčkou a rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
+<strong>Smažené rybí file s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							135,-
 						</span>
 </p>
 <p>
@@ -134,7 +134,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se syrskymi bio olivami a petrzelkovym pestem, etiopsky jahlovy salat s petrzelkou, citrony a zeleninou 139</li><li>Peceny filet z cerstveho mecouna se syrskymi bio olivami a petrzelkovym pestem, etiopsky jahlovy salat s petrzelkou, citrony a zeleninou, 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade, jasminova ryze, salatek 139</li><li>Italske houbove rizoto s parmezanem a pecenou nutrii na cesneku a bilem vine, salatek 169</li><li>Smazena pakora {cizrnove smazenky} s pecenou dyni, kvetakem, cibukou a lilky, smazena zeleninova ryze, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Thajske kari s kousky rybich filetu, zeleninou, kokosovym mlekem, arasidy a limetkovymi listky, jasminova ryze 139</li><li>Spagety s chobotnici, kalamary, pecenymi paprikami, kaparami a petrzelkovo ancovickovym pestem {L} 175</li><li>Lasagne s hovezim masem, zeleninou a rajcaty zapecene ve smetanove omacce s ementalem, salatek {L} 139</li><li>Pecena jehneci plec a hrudi na luzku z pecene letni zeleniny, pecene brambory, jogurtovy bylinkovy dip 169</li><li>Tofu ve sladkokysele omacce s paprikami, cuketami, chilli, sezamem a sazenym vajickem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
